# ploston

./: .dockerignore  Dockerfile  Makefile  README.md  docker-entrypoint.sh  pyproject.toml
.github/workflows/: build-rc.yml  ci.yml  print-secret.yml  promote-rc.yml  promote.yml  publish.yml  rebuild-on-core-release.yml  rebuild.yml  release.yml  test-callable.yml
data/: telemetry.db
deploy/: README.md
deploy/docker/: docker-compose.dev.yaml  docker-compose.homelab.yaml  docker-compose.yml
deploy/k8s/: configmap.yaml  firecrawl.yaml  ingress.yaml  kafka.yaml  namespace.yaml  native-tools.yaml  ploston-redis.yaml  ploston.yaml  secrets.yaml.example  workflows-configmap.yaml  zookeeper.yaml
deploy/k8s/observability/: otel-collector.yaml  prometheus.yaml
docker/native-tools/: Dockerfile
examples/: ael-config.yaml  ploston-config.yaml
examples/langchain-integration/: README.md  agent.py  requirements.txt
examples/workflows/: hello-world.yaml
internal/: .env.example  README.md  ael-config.yaml  mcp_http_test_client.py  mcp_test_client.py  ploston-config.yaml  run-native-tools.py
internal/workflows/: fetch-and-publish.yaml  fetch-url.yaml  file-operations.yaml  python-exec-explicit.yaml
observability/grafana/dashboards/: ael-overview.json  ael-tools.json  ael-workflows.json
observability/grafana/provisioning/dashboards/: dashboards.yaml
observability/grafana/provisioning/datasources/: datasources.yaml
observability/loki/: loki-config.yaml
observability/otel-collector/: config.yaml
observability/prometheus/: prometheus.yml
observability/tempo/: tempo-config.yaml
scripts/: verify_migration.py
src/ploston/: __init__.py  defaults.py
src/ploston/native_tools/: __init__.py  config_manager.py  config_watcher.py  server.py
src/ploston/plugins/: __init__.py
src/ploston/server/: __init__.py  __main__.py
src/ploston/workflow/: __init__.py  parser.py  registry.py  validator.py
tests/: conftest.py  test_basic.py
tests/chaos/: __init__.py  test_network_partition.py  test_pod_resilience.py
tests/e2e/: __init__.py  test_api_scenarios.py  test_error_scenarios.py  test_user_journeys.py
tests/integration/: README.md  __init__.py  conftest.py  test_cli.py  test_config_flow.py  test_http_transport.py  test_mcp_client_integration.py  test_mcp_frontend.py  test_mcp_http_client_integration.py  test_rest_api.py  test_security.py  test_server_smoke.py  test_telemetry_integration.py  test_tool_registry.py  test_workflow_engine.py
tests/integration/docker/: __init__.py  conftest.py  test_docker_ael.py
tests/integration/fixtures/configs/: test-config.yaml
tests/integration/fixtures/workflows/: code-step-test.yaml  dependencies-test.yaml  simple-linear.yaml
tests/integration/fixtures/workflows/invalid/: bad-syntax.yaml  missing-steps.yaml  unknown-tool.yaml
tests/integration/fixtures/workflows/malicious/: import-os.yaml  import-subprocess.yaml  use-eval.yaml  use-exec.yaml  use-open.yaml
tests/integration/homelab/: __init__.py  conftest.py  test_homelab_ael.py
tests/parity/: __init__.py  test_feature_parity.py
tests/property/: test_api_fuzzing.py  test_api_properties.py
tests/unit/: test_native_tools_config_reload.py  test_native_tools_config_security.py  test_native_tools_external_handlers.py  test_native_tools_handlers.py  test_native_tools_health_and_deps.py  test_plugin_framework.py  test_server_inprocess.py
