[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ploston"
version = "1.0.0"
description = "Ploston OSS - Deterministic Agent Execution Layer"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Ostan Labs", email = "hello@ostanlabs.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "ploston-core>=1.1.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
]

[project.scripts]
ploston-server = "ploston.server:main"

[project.urls]
Homepage = "https://github.com/ostanlabs/ploston"
Documentation = "https://ostanlabs.netlify.app"
Repository = "https://github.com/ostanlabs/ploston"

[tool.hatch.build.targets.wheel]
packages = ["src/ploston"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

