[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ploston"
version = "1.0.0"
description = "Ploston OSS - Deterministic Agent Execution Layer"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Ostan Labs", email = "hello@ostanlabs.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "ploston-core>=1.3.0,<2.0.0",
]

[project.optional-dependencies]
native-tools = [
    "fastmcp>=3.2.0",
]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.2.0",
    "fastmcp>=3.2.0",  # For testing native tools server
]

[project.scripts]
ploston-server = "ploston.server:main"

[project.urls]
Homepage = "https://github.com/ostanlabs/ploston"
Documentation = "https://ostanlabs.netlify.app"
Repository = "https://github.com/ostanlabs/ploston"

[tool.hatch.build.targets.wheel]
packages = ["src/ploston"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501", "E402"]  # E402: Module level import not at top of file (needed for logging config)

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers --strict-config"
timeout = 60
markers = [
    "integration: integration tests exercising real components/processes",
    "unit: fast in-process unit tests",
    "workflow: workflow engine tests",
    "registry: tool registry tests",
    "security: security / sandbox tests",
    "cli: CLI tests",
    "slow: tests that take a long time to run",
    "smoke: server smoke tests that start the real server",
    "frontend: MCP frontend tests",
    "parity: migration parity tests (AEL vs Ploston)",
    "mcp_client: MCP client integration tests",
    "mcp_http_client: MCP HTTP client integration tests",
    "homelab: homelab K3s deployment integration tests",
    "requires_running_mode: tests that require AEL to be in running mode (not configuration mode)",
    "requires_server: tests that require a running Ploston server (skipped in CI without server)",
]

[tool.coverage.run]
branch = false
# parallel=true lets coverage combine data from spawned subprocesses
# (e.g. `python -m ploston.server` in the smoke tests) when they flush
# cleanly. The smoke server is killed via SIGTERM, which bypasses coverage's
# atexit flush, so the real OSS surface is measured by the in-process tests in
# tests/unit/test_server_inprocess.py instead.
parallel = true
source = ["ploston"]
# NOTE: `ploston.native_tools` IS LIVE — it is the entrypoint of the native-tools
# Docker image (docker/native-tools/Dockerfile: `CMD python -m ploston.native_tools.server`),
# wrapping ploston_core.native_tools implementations. It must be measured; it is
# currently live-but-untested (see REMEDIATION_PLAN.md Area H — fs/SSRF + tool tests).
# `ploston.plugins` has no importer in the OSS runtime, no entry point, and no test;
# it appears to be a legacy duplicate of ploston_core's plugin system. It is omitted
# only pending dead-code confirmation + deletion in Phase 3, so it does not distort
# the live-surface number. Do NOT omit native_tools.
omit = [
    "*/ploston/plugins/*",
]

[tool.coverage.paths]
source = ["src/ploston", "*/ploston"]

[tool.coverage.report]
show_missing = true

[dependency-groups]
dev = [
    "ploston-cli>=1.0.0",
    "schemathesis>=4.9.4",
]
